objects/CMPL123__Audit_Trail_Entry__c.object
<CustomObject>
    <description>Capture audit trail history of all select objects/fields.</description>
    <fields>
        <fullName>CMPL123__Action__c</fullName>
        <description>Action Type</description>
        <inlineHelpText>Action Type</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inserted</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Audit_Trail_JSON__c</fullName>
        <description>Audit Trail JSON</description>
        <inlineHelpText>Audit Trail JSON</inlineHelpText>
        <label>Audit Trail JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Created_By_Username__c</fullName>
        <description>Created By Username</description>
        <inlineHelpText>Created By Username</inlineHelpText>
        <label>Created By Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Created_by_Occasional_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by Occasional User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Field_Api_Name__c</fullName>
        <description>Field Api Name</description>
        <inlineHelpText>Field Api Name</inlineHelpText>
        <label>Field Api Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Field_Name__c</fullName>
        <description>Field Name</description>
        <inlineHelpText>Field Name</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__LookupFieldAPI__c</fullName>
        <description>Stores the API Name of the Look Up Field</description>
        <inlineHelpText>Stores the API Name of the Look Up Field</inlineHelpText>
        <label>Look up Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__NewValue_LTA__c</fullName>
        <label>NewValue LTA</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__NewValue__c</fullName>
        <description>Audit New Value</description>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__New_Value__c</fullName>
        <description>New Value</description>
        <inlineHelpText>New Value</inlineHelpText>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Object_Api_Name__c</fullName>
        <description>Object Api Name</description>
        <inlineHelpText>Object Api Name</inlineHelpText>
        <label>Object Api Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Object_Name__c</fullName>
        <description>Object Name</description>
        <inlineHelpText>Object Name</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__OldValue_LTA__c</fullName>
        <label>OldValue LTA</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__OldValue__c</fullName>
        <description>Audit Old value</description>
        <inlineHelpText>Audit Old value</inlineHelpText>
        <label>Old Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Old_Value__c</fullName>
        <description>Old Value</description>
        <inlineHelpText>Old Value</inlineHelpText>
        <label>Old Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__ParentId__c</fullName>
        <description>Parent/Related Salesforce Record Id</description>
        <inlineHelpText>Parent/Related Salesforce Record Id</inlineHelpText>
        <label>Parent Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Sequence_No__c</fullName>
        <formula>VALUE(TRIM(SUBSTITUTE(Name, 'ATE-','')))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Audit Trail Entry</label>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123__Object_Name__c</columns>
        <columns>CMPL123__Action__c</columns>
        <columns>CMPL123__Field_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ATE-{00000}</displayFormat>
        <label>Audit Trail Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trail Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>